[package]
name = "transaction_processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "transaction_processor"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.17"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.10"
